--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Title</title>
-  </head>
-  <body>
-    Hello world
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Title</title>
+</head>
+
+<body>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li>
+      <a href="#">Lighting</a>
+      <ul>
+        <li><a href="#">Energy Saving Lamps</a></li>
+        <li><a href="#">LED Lamps</a></li>
+        <li>
+          <a href="#">Halogen Lamps</a>
+          <ul>
+            <li><a href="#">Halogen Classic</a></li>
+            <li><a href="#">Halogen Spot</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li><a href="#">Small Home Appliances</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+
+  <a href="ampersand.html">Ampersand page</a>
+</body>
+
 </html>
